--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -7,7 +7,7 @@ body {
 .site-bg {
     min-height: 100vh;
     max-width: 100vw;
-    background-image: url("/bg-flair.png"), url("/bg.png");
+    background-image: url('/bg-flair.png'), url('/bg.png');
     background-repeat: no-repeat, repeat;
     background-position: 100% 100%, 0 0;
     background-size: 60%, auto;
